# BrokenThrone

./: .gitignore  CMakeLists.txt
assets/maps/: tilemap.json
assets/music/retroindiejosh_8bitpack1/: More Music by Retro Indie Josh.url  README.txt
inc/my_learn_opengl/: mainwindow.h
src/: CMakeLists.txt  main.cpp  mainwindow.cpp
src/core/: assetmanager.cpp  assetmanager.h  renderer.cpp  renderer.h  window.cpp  window.h
src/core/gui/: button.cpp  button.h
src/core/json/: cjson.c
src/game/: game.cpp  game.h
src/game/player/: player.cpp  player.h
src/game/state/: gamestate.h  gamestatemanager.h  gamestatemenu.cpp  gamestatemenu.h  stateingame.cpp  stateingame.h  statemenu.cpp  statemenu.h  statesettings.cpp  statesettings.h
src/game/tilemap/: tilemap.cpp  tilemap.h
src/game/utils/: tools.h
test_benchmark/: CMakeLists.txt
test_googletest/: CMakeLists.txt
